# esp32_printer

./: .gitignore  CMakeLists.txt  esp32_run.bat  esp32_run.ps1  sdkconfig
app/inc/: app.h
app/src/: app.c
main/: CMakeLists.txt  config.h  esp32_printer.c
middle/ble/inc/: ble.h
middle/ble/src/: ble.c
middle/button/inc/: button.h
middle/button/src/: button.c
middle/internal_flash/inc/: internal_flash.h
middle/internal_flash/src/: internal_flash.c
middle/led/inc/: led.h
middle/led/src/: led.c
middle/mqtt/inc/: mqtt.h
middle/mqtt/src/: mqtt.c
middle/ota/inc/: ota.h
middle/ota/src/: ota.c
middle/uart/inc/: uart.h
middle/uart/src/: uart.c
middle/wifi/inc/: wifi.h
middle/wifi/src/: wifi.c
tools/: mqtt_web_uploader.py
